# langgraph-demo

./: .gitignore  pyproject.toml
amq/: CONCEPTS.md
amq/practice1/: consumer.py  producer.py
amq/practice2/amq_pubsub_demo/: README.md  (+4 more)
elasticsearch/: CONCEPTS.md  intro.md
elasticsearch/practice1/: elasticsearch_quickstart.py
langgraph/practice/: case04_branching.py  case05_memory.py  case06_visualize_debug.py  langgraph_basics_plan.md  model_provider.py
langgraph/practice1/: case08_rag_graph_baseline.py  case10_tool_augmented_rag.py  case12_eval_and_observe.py  plan.md
langgraph/practice2/: case14_planner_executor.py
langgraph/practice3/: case21_guardrails_regex_and_lists.py  case22_multi_turn_structured_rag.py  case24_contract_tests_and_eval.py
langgraph/practice4/: case25_react_single_agent.py  case26_react_multi_agent.py  case27_command_edges.py  plan.md
practice/: __init__.py  case01_basic_chat.py  case02_min_graph.py  case03_tools_agent.py  case04_branching.py  case05_memory.py  case06_visualize_debug.py
practice1/: __init__.py  case07_build_vectorstore.py  case08_rag_graph_baseline.py  case09_memory_persistence.py  case10_tool_augmented_rag.py  case11_router_rag_vs_tools.py  case12_eval_and_observe.py  common.py
practice1/data/: tooling_snippets.md
practice2/: case13_dual_agent_chat.py  case15_multi_agent_router.py  case16_team_rag_tools.py  case17_checkpoints_and_resume.py  case18_multi_agent_eval.py  plan.md
practice3/: case19_structured_output_basics.py  case20_function_calling_tools.py  case23_safety_and_content_filters.py  plan.md
(+2 files in other folders)
