[project]
name = "langgraph-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.7.0",
    "langchain>=1.0.8",
    "langchain-anthropic>=1.1.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.3",
    "langgraph-cli[inmem]>=0.4.7",
]
