[project]
name = "langgraph-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.7.0",
    "langchain>=1.0.8",
    "langchain-community>=0.3.0",
    "langchain-anthropic>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-experimental>=0.3.0",
    "langchain-chroma>=0.1.4",
    "langgraph>=1.0.3",
    "langgraph-cli[inmem]>=0.4.7",
    "chromadb>=0.5.18",
    "tavily-python>=0.4.0",
    "python-dotenv>=1.0.1",
    "langsmith>=0.1.129",
]
